Tooltips and roadmap styling This commit updates the tooltips functionality and the roadmaps tooltip style: - Prevents tooltips from overflowing the right hand side of the page. - Styles the roadmap-specific tooltip content.

--- a/css/dta-gov-au.styles.css
+++ b/css/dta-gov-au.styles.css
@@ -3161,7 +3161,9 @@ img.align-right, p.align-right {
   position: absolute;
   top: 67px;
   top: 4.2rem;
-  width: 80%;
+  width: 100%;
+  min-width: 480px;
+  min-width: 30rem;
   left: 0px;
   left: 0rem; }
   @media (min-width: 768px) {
@@ -3286,17 +3288,17 @@ img.align-right, p.align-right {
   #views-exposed-form-business-roadmap-page-taxonomy-page-1 .form-actions {
     display: none;
     visibility: hidden; }
-  #views-exposed-form-business-roadmap-page-taxonomy-page-1 .au-tooltip h3 {
+  #views-exposed-form-business-roadmap-page-taxonomy-page-1 #tooltip-filter-by-benefit-to-user-journey.au-tooltip h3 {
     font-size: 20px;
     font-size: 1.25rem;
     line-height: 1.6; }
-  #views-exposed-form-business-roadmap-page-taxonomy-page-1 .au-tooltip .au-introduction {
+  #views-exposed-form-business-roadmap-page-taxonomy-page-1 #tooltip-filter-by-benefit-to-user-journey.au-tooltip .au-introduction {
     font-size: 16px;
     font-size: 1rem;
     line-height: 1.5; }
-  #views-exposed-form-business-roadmap-page-taxonomy-page-1 .au-tooltip dl {
+  #views-exposed-form-business-roadmap-page-taxonomy-page-1 #tooltip-filter-by-benefit-to-user-journey.au-tooltip dl {
     display: table; }
-  #views-exposed-form-business-roadmap-page-taxonomy-page-1 .au-tooltip dt {
+  #views-exposed-form-business-roadmap-page-taxonomy-page-1 #tooltip-filter-by-benefit-to-user-journey.au-tooltip dt {
     font-weight: normal;
     white-space: nowrap;
     border: 1px solid #7F7F7F;
@@ -3311,13 +3313,73 @@ img.align-right, p.align-right {
     font-size: 1rem;
     line-height: 1.5;
     display: table-cell; }
-  #views-exposed-form-business-roadmap-page-taxonomy-page-1 .au-tooltip dd {
+  #views-exposed-form-business-roadmap-page-taxonomy-page-1 #tooltip-filter-by-benefit-to-user-journey.au-tooltip dd {
     border: none;
     display: table-cell; }
-    #views-exposed-form-business-roadmap-page-taxonomy-page-1 .au-tooltip dd.line-break {
+    #views-exposed-form-business-roadmap-page-taxonomy-page-1 #tooltip-filter-by-benefit-to-user-journey.au-tooltip dd.line-break {
       display: table-row;
       height: 16px;
       height: 1rem; }
+
+#roadmap-themes .au-callout > h3 {
+  font-size: 20px;
+  font-size: 1.25rem;
+  line-height: 1.6;
+  display: inline-block; }
+
+#roadmap-themes .au-callout > button {
+  display: inline-block;
+  margin-top: -3px;
+  margin-top: -0.2rem; }
+
+#roadmap-themes .au-callout > ul {
+  list-style: none;
+  position: relative; }
+  #roadmap-themes .au-callout > ul li.first:before {
+    background-color: #C91978; }
+  #roadmap-themes .au-callout > ul li.second:before {
+    background-color: #32A556; }
+  #roadmap-themes .au-callout > ul li.third:before {
+    background-color: #EE6523; }
+  #roadmap-themes .au-callout > ul li:before {
+    content: ' ';
+    display: block;
+    width: 24px;
+    width: 1.5rem;
+    height: 24px;
+    height: 1.5rem;
+    border-radius: 50%;
+    position: absolute;
+    left: 0; }
+
+#roadmap-themes .au-callout .au-tooltip {
+  padding-left: 56px;
+  padding-left: 3.5rem; }
+  #roadmap-themes .au-callout .au-tooltip h3 {
+    font-size: 20px;
+    font-size: 1.25rem;
+    line-height: 1.6; }
+  #roadmap-themes .au-callout .au-tooltip .au-introduction {
+    font-size: 16px;
+    font-size: 1rem;
+    line-height: 1.5; }
+  #roadmap-themes .au-callout .au-tooltip h4 {
+    font-size: 16px;
+    font-size: 1rem;
+    line-height: 1.5;
+    margin-top: 24px;
+    margin-top: 1.5rem; }
+  #roadmap-themes .au-callout .au-tooltip div {
+    padding-left: 16px;
+    padding-left: 1rem;
+    margin-left: -24px;
+    margin-left: -1.5rem; }
+  #roadmap-themes .au-callout .au-tooltip .theme-1 {
+    border-left: 8px solid #C91978; }
+  #roadmap-themes .au-callout .au-tooltip .theme-2 {
+    border-left: 8px solid #32A556; }
+  #roadmap-themes .au-callout .au-tooltip .theme-3 {
+    border-left: 8px solid #EE6523; }
 
 body {
   margin: 0; }
